# pocketjack-portfolio

./: Cargo.toml  Dockerfile  README.md  Trunk.toml  index.html
ideas/: experience.html  home.html  music.html  projects.html
src/: data.rs  main copy.rs  main.rs  models.rs
src/components/: about.rs  app.rs  back_to_up.rs  beats.rs  client_project.rs  contact.rs  experience.rs  footer.rs  header.rs  hero.rs  home.rs  lang.rs  mod.rs  music.rs  my_projects.rs  projects.rs  skills copy.rs  skills.rs
src/pages/: home.rs  mod.rs
