[package]
name = "pocketjack-portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
web-sys = "0.3"
gloo = "0.11"
chrono = { version = "0.4" }

[profile.release]
opt-level = 3
lto = true