[package]
name = "pocketjack-portfolio"
version = "0.1.0"
edition = "2021"


[dependencies]
yew = { version = "0.21", features = ["csr"] }
gloo = "0.8"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "Event", "ScrollToOptions"] }
wasm-bindgen = "0.2"

[dev-dependencies]
trunk = "0.17"